@@ -24,6 +24,11 @@ Core and Builtins
 
 - Issue #5759: float() didn't call __float__ on str subclasses.
 
+- Issue #5108: Handle %s like %S and %R in PyUnicode_FromFormatV(): Call
+  PyUnicode_DecodeUTF8() once, remember the result and output it in a second
+  step. This avoids problems with counting UTF-8 bytes that ignores the effect
+  of using the replace error handler in PyUnicode_DecodeUTF8().
+
 Library
 -------
 
